--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONNECT_STRING=mongodb+srv://Beeru:ch4oOk16P8yT3YKH@cluster0.eqy5e.mongodb.net/
+CONNECT_STRING=mongodb://localhost:27017/vcinep
 PORT=8800
 SECRET_KEY = 31415
 
