Configs for deployment

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-CONNECT_STRING=mongodb://localhost:27017/vcinep
+CONNECT_STRING="mongodb+srv://Beeru:R12D1V6Tzg8oSmUB@cluster0.eqy5e.mongodb.net/vcinep_deployment?retryWrites=true&w=majority"
 PORT=8800
 SECRET_KEY = 31415
-
-
 EMAIL_USER=andanh231415@gmail.com
 EMAIL_PASS=upkk wkml rpve lkmu
-
 GEMINI_KEY=AIzaSyBAZma1Jz_NIZQtD7UposRjE-b7u6IxjN8
+
+NODE_ENV = "development" # edit this to be "production" when deploy
