--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "product": "node index.js",
     "server": "nodemon index"
   },
   "author": "Nhom7",
